# server/controllers/userController.js
@@ -1,0 +1,36 @@
+const User = require('../models/userModel');
+const jwt = require('jsonwebtoken');
+
+const secret = process.env.SECRET;
+
+// Create a JWT
+const createToken = (_id) => {
+  return jwt.sign({ _id }, secret, { expiresIn: '3d' });
+};
+
+// User login
+const loginUser = async (req, res) => {
+  const { email, password } = req.body;
+
+  try {
+    const user = await User.login(email, password);
+    const token = createToken(user._id);
+    res.status(200).json({ email, token });
+  } catch (err) {
+    res.status(400).json({ err: err.message });
+  }
+};
+
+// User signup
+const signupUser = async (req, res) => {
+  const { email, password } = req.body;
+  try {
+    const user = await User.signup(email, password);
+    const token = createToken(user._id);
+    res.status(200).json({ email, token });
+  } catch (err) {
+    res.status(400).json({ err: err.message });
+  }
+};
+
+module.exports = { loginUser, signupUser };
