# server/models/userModel.js
@@ -1,0 +1,66 @@
+const mongoose = require('mongoose');
+const bcrypt = require('bcrypt');
+const Schema = mongoose.Schema;
+const validator = require('validator');
+
+// Creating Schema
+const userSchema = new Schema({
+  email: {
+    type: String,
+    required: true,
+    unique: true,
+  },
+  password: {
+    type: String,
+    required: true,
+  },
+});
+
+// Static method for user signup
+userSchema.statics.signup = async function (email, password) {
+  if (!email || !password) {
+    throw Error('All fields must be filled');
+  }
+  if (!validator.isEmail(email)) {
+    throw Error('Email is not valid');
+  }
+  if (!validator.isStrongPassword(password)) {
+    throw Error('Password is not strong enough');
+  }
+
+  const exists = await this.findOne({ email });
+
+  if (exists) {
+    throw Error('Email already in use');
+  }
+
+  const salt = await bcrypt.genSalt(10);
+  const hash = await bcrypt.hash(password, salt);
+
+  const user = await this.create({ email, password: hash });
+
+  return user;
+};
+
+// Static method for user login
+userSchema.statics.login = async function (email,password) {
+   if (!email || !password) {
+    throw Error('All fields must be filled');
+  }
+
+  const user = await this.findOne({ email });
+
+  if (!user) {
+    throw Error('Incorrect Email');
+  }
+
+  const match = await bcrypt.compare(password,user.password)
+
+  if(!match){
+    throw Error('Incorrect Password')
+  }
+
+  return user;
+}
+
+module.exports = mongoose.model('User', userSchema);
