# server/server.js
@@ -1,18 +1,28 @@
+require('dotenv').config();
+
 const express = require('express');
 const YAML = require('yamljs');
 const swaggerUi = require('swagger-ui-express');
-const workOutRoutes = require('./routes/workouts');
 const mongoose = require('mongoose');
 const cors = require('cors');
+const helmet = require('helmet');
 
+const { globalLimiter, loginLimiter } = require('./middleware/rateLimiter');
+const workOutRoutes = require('./routes/workouts');
+const userRoutes = require('./routes/user');
+const logger = require('./middleware/logger');
+const errorHandler = require('./middleware/errorHandler');
+
+// Swagger YAML documentation
 const swaggerDocument = YAML.load('./swagger.yaml');
-require('dotenv').config();
 
 const port = process.env.PORT || 4000;
 const mongo = process.env.MONGO_URI;
 
 const app = express();
 
+
+// CORS
 app.use(
   cors({
     origin: 'http://localhost:5173',
@@ -20,17 +30,32 @@ app.use(
   })
 );
 
+// Serve Swagger UI 
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
+// Parse incoming JSON payloads
 app.use(express.json());
 
-app.use((req, res, next) => {
-  console.log(req.path, req.method);
-  next();
-});
+// Secure HTTP headers
+app.use(helmet());
 
+// Global rate limiter
+app.use(globalLimiter);
+
+// Login route-specific rate limiter
+app.use('/api/user/login', loginLimiter);
+
+// Logger middleware 
+app.use(logger);
+
+// Route handlers for API endpoints
 app.use('/api/workouts', workOutRoutes);
+app.use('/api/user', userRoutes);
 
+// Error handler
+app.use(errorHandler);
+
+// Connect to MongoDB and start the server
 mongoose
   .connect(mongo)
   .then(() => {
